[gd_scene load_steps=15 format=2]

[ext_resource path="res://old/scripts/main.gd" type="Script" id=1]
[ext_resource path="res://old/scenes/MainPanel.gd" type="Script" id=2]
[ext_resource path="res://old/gfx/players_2.png" type="Texture" id=3]
[ext_resource path="res://old/gfx/checkmark.png" type="Texture" id=4]
[ext_resource path="res://old/gfx/players_4.png" type="Texture" id=5]
[ext_resource path="res://old/sfx/8bit_bossa.mp3" type="AudioStream" id=6]
[ext_resource path="res://old/gfx/board.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ButtonGroup" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Board" type="Sprite" parent="."]
texture = ExtResource( 7 )
offset = Vector2( 173, 173 )

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.847059 )
margin_right = 346.0
margin_bottom = 346.0

[node name="Won" type="Label" parent="CanvasLayer/Panel"]
margin_right = 346.0
margin_bottom = 346.0
text = "Player Won"
align = 1
valign = 1

[node name="MainPanel" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.976471 )
margin_right = 346.0
margin_bottom = 346.0
script = ExtResource( 2 )

[node name="Start" type="Label" parent="CanvasLayer/MainPanel"]
margin_right = 346.0
margin_bottom = 346.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start"
align = 1
valign = 1

[node name="Blink" type="AnimationPlayer" parent="CanvasLayer/MainPanel/Start"]
anims/Blink = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="HowToPlay" type="Label" parent="CanvasLayer/MainPanel"]
visible = false
margin_top = 40.0
margin_right = 346.0
margin_bottom = 346.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "How to play"
align = 1
valign = 1

[node name="Blink" type="AnimationPlayer" parent="CanvasLayer/MainPanel/HowToPlay"]
anims/Blink = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="NumberOfPlayers" type="Label" parent="CanvasLayer/MainPanel"]
margin_top = 80.0
margin_right = 346.0
margin_bottom = 346.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Number of Players"
align = 1
valign = 1

[node name="Blink" type="AnimationPlayer" parent="CanvasLayer/MainPanel/NumberOfPlayers"]
anims/Blink = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="Radio2" type="CheckBox" parent="CanvasLayer/MainPanel"]
margin_left = 72.0
margin_top = 225.0
margin_right = 368.0
margin_bottom = 489.0
rect_scale = Vector2( 0.31713, 0.31713 )
group = SubResource( 1 )
icon = ExtResource( 3 )

[node name="Radio4" type="CheckBox" parent="CanvasLayer/MainPanel"]
margin_left = 180.0
margin_top = 226.0
margin_right = 216.0
margin_bottom = 250.0
rect_scale = Vector2( 0.313442, 0.313442 )
group = SubResource( 1 )
icon = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MainPanel"]
visible = false
margin_left = 18.0
margin_top = 52.0
margin_right = 58.0
margin_bottom = 92.0
rect_scale = Vector2( 1.89436, 1.87609 )
color = Color( 0, 0.698039, 0.176471, 1 )

[node name="Check2" type="Sprite" parent="CanvasLayer/MainPanel"]
visible = false
modulate = Color( 0.0901961, 0.698039, 0.215686, 1 )
position = Vector2( 146, 239 )
scale = Vector2( 0.261719, 0.261719 )
texture = ExtResource( 4 )

[node name="Check4" type="Sprite" parent="CanvasLayer/MainPanel"]
visible = false
modulate = Color( 0.0901961, 0.698039, 0.215686, 1 )
position = Vector2( 254, 239 )
scale = Vector2( 0.261719, 0.261719 )
texture = ExtResource( 4 )
